# El-Diario-NewRoom

./: .gitignore  App.tsx  Dockerfile  Dockerfile.prod  README.md  analyze_styles.py  constants.ts  docker-compose.prod.yml  docker-compose.yml  extraer.py  idml_batch_tool.py  index.css  index.html  index.tsx  inspect_styles.py  inspect_sumario.py  metadata.json  new.sile  nginx.conf  package-lock.json  package.json  salidacustom.sile  tailwind.config.js  test_extract.ts  test_style_overrides.py  types.ts  verify_adn.py  verify_fonts.py  vite.config.ts
4/: designmap.xml
components/: CodeMirrorEditor.tsx  DestinationFolderSelector.tsx  GoogleAuthButton.tsx  LogViewer.tsx  MonacoEditor.tsx  NextcloudAuthButton.tsx  NextcloudAuthModal.tsx  PdfViewer.tsx  PreviewModal.tsx  SimpleEditor.tsx  StoryMapper.tsx  SyntaxHighlighter.tsx  TagAutocomplete.tsx  TemplateGallery.tsx  UserManual.tsx  WordCountIndicator.tsx
hooks/: useSyntaxHighlight.ts  useTagAutocomplete.ts  useTypstLive.ts
preview-service/: Dockerfile  README.md  SERVER_SETUP.md  app.py  cleanup_scribus.py  convert.js  datos_cn_colombia.csv  datos_se_multi.csv  diagnostic.py  export_idml.py  export_sla.py  idml_to_high_fidelity_typst.py  idml_to_sla.py  main.py  migrate_sheets.py  package.json  pyproject.toml  reportlab_generator.py  requirements.txt  resultados_cn_colombia.html  sla_reportlab_generator.py  start_api.sh  test_reportlab.json  test_v3.typ  test_v4.typ  test_v5.typ
preview-service/.scribus/: prefs150.xml
refactor/: MIGRATION.md  README.md  index.ts
scripts/: deploy.sh  install-server.sh  (+4 more)
(+71 files in other folders)
