[project]
name = "preview-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "fonttools>=4.61.1",
    "httpx==0.27.0",
    "pdf2image==1.17.0",
    "pillow==10.4.0",
    "pyphen>=0.17.2",
    "python-multipart==0.0.12",
    "reportlab>=4.4.10",
    "uharfbuzz>=0.53.3",
    "uvicorn[standard]==0.30.6",
]
